# SUIBOT

./: .breakpoints  Function.py  background.json  bank.json  channels.py  host.py  main.py  members.py  pyproject.toml  roles.py  timetoearn.json  variable.py
EconomyAndGamble/: add.py  daily.py  gamehelp.py  give.py  roll.py  roulette.py  shop.py  shoproles.json  transfer.py
Mod_command/: addbg.py  ban.py  help.py  info.py  kick.py  mute&unmute.py  ping.py  repeat.py  spd.py  vanmau.py  verify.py
TrashCan/: add.py  backup.py  slotmac.py
command/: ban.py  help.py  info.py  kick.py  ping.py  slotmac.py  vanmau.py  verify.py
